tests/error/comptime_arg_errors/callable.err
Error: Invalid annotation (at $FILE:8:22)
  | 
6 | 
7 | @guppy
8 | def main(f: Callable[[nat @comptime], None]) -> None:
  |                       ^^^^^^^^^^^^^ Comptime annotations are only allowed for named top-level
  |                                     function arguments

Guppy compilation failed due to 1 previous error
